--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.10",
     "zod": "^3.21.4"
